--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -22,7 +22,7 @@
                 <a href="{% url 'mapa' %}" class="btn btn-primary">Ver Mapa</a>
             </div>
         </div>
-
+<!-- 
         <div class="card text-center shadow-lg">
             <div class="card-body">
                 <i class="fa-solid fa-qrcode fa-3x text-success mb-3"></i>
@@ -31,7 +31,7 @@
                 <a href="/scanner/" class="btn btn-success">Abrir Scanner</a>
             </div>
         </div>
-    </div>
+    </div>-->
 </div>
     
 
