--- a/templates/base.html
+++ b/templates/base.html
@@ -83,9 +83,9 @@
                     <li class="nav-item">
                         <a href="{% url 'mapa' %}" class="nav-link"><i class="fas fa-map-location-dot"></i> Mapa</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a href="/scanner/" class="nav-link"><i class="fas fa-qrcode"></i> Scanner</a>
-                    </li>
+                    </li>-->
                 </ul>
             </div>
 
